[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprites/Menus/SeñalTraficoMenu.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Menus/TemploMainMenu.png" type="Texture" id=3]
[ext_resource path="res://Assets/FontRes.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Audio/MetalFalling.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/arrancamiento.mp3" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "GoAnim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundLayer/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -14, -8 ), Vector2( -14, -8 ), Vector2( -26, -25 ), Vector2( -47, -15 ), Vector2( -86, -77 ), Vector2( -116, -65 ), Vector2( -121, -127 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundLayer/TextureRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 509, 286 ), Vector2( 509, 286 ), Vector2( 534, 300 ), Vector2( 577, 324 ), Vector2( 655, 368 ), Vector2( 716, 402 ), Vector2( 727, 408 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundLayer/TextureRect:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StopSignLayer/TextureRect:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StopSignLayer/TextureRect:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 270 ), Vector2( 584, 329 ), Vector2( 591.4, 333 ), Vector2( 621, 349 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StopSignLayer/TextureRect:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 136, -12 ), Vector2( 166, 66 ), Vector2( 166, 117 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayer:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Go"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AudioStreamPlayer2:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundLayer/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -14, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundLayer/TextureRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 509, 286 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundLayer/TextureRect:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StopSignLayer/TextureRect:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StopSignLayer/TextureRect:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 480, 270 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StopSignLayer/TextureRect:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayer:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLayer" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer"]
anchor_right = 2.0
anchor_bottom = 2.0
margin_left = -14.0
margin_top = -8.0
margin_right = 495.0
margin_bottom = 278.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopSignLayer" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="StopSignLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_right = 480.0
margin_bottom = 278.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoButton" type="Button" parent="."]
anchor_left = 0.509
anchor_top = 0.398
anchor_right = 0.541
anchor_bottom = 0.435
margin_left = -10.64
margin_top = 0.0799866
margin_right = 8.0
margin_bottom = 17.09
custom_fonts/font = ExtResource( 4 )
text = "Go"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.509
anchor_top = 0.681333
anchor_right = 0.541
anchor_bottom = 0.718333
margin_left = -10.64
margin_top = 0.0799866
margin_right = 17.0
margin_bottom = 17.09
custom_fonts/font = ExtResource( 4 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.465
anchor_top = 0.2
anchor_right = 0.715
anchor_bottom = 0.252
margin_left = -39.2
margin_right = -6.20001
margin_bottom = 6.96
custom_fonts/font = ExtResource( 4 )
text = "Onda y Corpúsculo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GoAnim = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[connection signal="pressed" from="GoButton" to="." method="GoButtonPressed"]
[connection signal="pressed" from="ExitButton" to="." method="ExitButtonPressed"]
